TODO-MVC-Example: Some code, no text

--- a/examples/Todos_1/index.html
+++ b/examples/Todos_1/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>fluss &amp; react js</title>
     <link rel="stylesheet" href="../bower_components/todomvc-common/base.css">
+    <script type="text/javascript" src="../bower_components/react/react.min.js"></script>
 </head>
 <body>
     <section id="todoapp">
 
     </section>
+
+    <script type="text/javascript" src="./todo1bundle.js"></script>
 </body>
 </html>
